* Implemented the ability to set internal state based on an object type, i.e. you can now do setInternalState(object, myServiceImpl) to set the first field in object which can be assignable to myServiceImpl. This means that you get refactor friendly code while still being able to set internal state.
* Updated the tutorial projects to take advantage of the latest features in PowerMock.
* Fixed a NPE bug in the AbstractTestClassExtractor.isPrepared(..) method.
* The test class is no longer recommended as a PrepareForTest candidate if a NPE occurs inside the test class.
* Added createStrictPartialMockForAllMethodsExcept and createNicePartialMockForAllMethodsExcept to the PowerMock API.
* The Whitebox API method getAllMethodExcept now traverses the class hierarchy looking for methods.
* Fixed a bug in the verifyAll method of the PowerMock API, the state is now properly disposed.

Change log 0.9 (released 2008-11-10)
------------------------------------
* Structural refactoring to remove Structure 101 XS: moved WhiteBox implementation to separate class in core and moved IndicateReloadClass
* By default Whitebox.getInternalState and Whitebox.setInternalState now traverses the class hierarchy when looking for a field.
* Better error message if a NPE is caught in a subclass of a class being prepared for test.
* The PrepareForTest annotation now manipulates the full (super) class hierachy by default. This makes it easier to perform mocking of super class methods.
* A new annotation called PrepareOnlyThisForTest has been added and works in the same way that PrepareForTest previously did, i.e. ONLY the specified classes are prepared and not the entire hierarchy.
* Fixed a bug that made it impossible to invoke vararg constructors.
* createMockAndExpectNew now takes expected arguments as the second parameter.
* expectNew takes expected arguments as the second parameter.