@@ -1,7 +1,5 @@
 package demo.org.powermock.examples.simple;
 
-import demo.org.powermock.examples.simple.Logger;
-import demo.org.powermock.examples.simple.SimpleConfig;
 
 /**
  * Hello world!
@@ -19,7 +17,7 @@ public class Greeter {
         }
     }
 
-	private static String getMessage() {
+    static String getMessage() {
 		return SimpleConfig.getGreeting() + " " + SimpleConfig.getTarget();
 	}
 }
